# gymApp

./: .gitignore  AGENTS.md  CMakeLists.txt  QML_MODULARIZATION.md  SESSION_FLOW.md  app.py  gui_rework.md  gui_tasks.md  gym.sqlite  qtquickcontrols2.conf
app/: main.cpp
core/: Backend.cpp  Backend.h  Clogger.cpp  Clogger.h  ExerciseRepository.cpp  ExerciseRepository.h  MachineRepository.cpp  MachineRepository.h  SessionRepository.cpp  SessionRepository.h  SetRepository.cpp  SetRepository.h
data/: gym_21_1_2026.json  machines.json
model/: LoaderModel.cpp  LoaderModel.h  MachineListModel.cpp  MachineListModel.h  SessionDetailModel.cpp  SessionDetailModel.h  SessionEditorModel.cpp  SessionEditorModel.h  SessionListModel.cpp  SessionListModel.h
planning/: planning.md  session-crud-plan.md
qml/: ActionButtonGroup.qml  CollapsibleCard.qml  DatabaseCard.qml  ExerciseCardEditor.qml  HeaderBar.qml  LabeledSpinBox.qml  ListHeader.qml  MachineListCard.qml  MachineListItem.qml  Main.qml  SessionEditorPane.qml  SessionListPage.qml  SessionView.qml  SetInputRow.qml  SetRowEditor.qml  SettingsView.qml  Theme.qml
sql/: README.md  seed_sqlite.py
sql/migrations/: 001_init.sql
tests/: RepositoryCrudTest.cpp  SessionDetailModelTest.cpp  SessionEditorModelInvokeTest.cpp
